# 3d-game-engine

./: .gitmodules  CMakeLists.txt
EngineCore/: CMakeLists.txt
EngineCore/include/Core/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp
EngineCore/include/Core/Utilts/: test.hpp
EngineCore/src/Core/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp
EngineCore/src/Core/Modules/: UIModule.cpp  UIModule.hpp
EngineCore/src/Core/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
EngineCore/src/Core/Utilts/: test.cpp
EngineEditor/: CMakeLists.txt
EngineEditor/src/: main.cpp
